fixed significant X-Scroll on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -416,4 +416,5 @@ input[name='q']::placeholder {
     clear: left;
     font: 14px Helvetica, Arial, sans-serif;
     width: 600px;
+    max-width: 100%;
 }
